--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "scripts": {
     "exec": "bun run src/cli.ts",
-    "dev": "bun run --watch src/cli.ts"
+    "dev": "bun run --watch src/server.tsx"
+  },
+  "dependencies": {
+    "@elysiajs/html": "^0.8.0",
+    "@kitajs/ts-html-plugin": "^1.3.3",
+    "elysia": "^0.8.9"
   }
 }
