--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "scripts": {
     "exec": "bun run src/cli.ts",
+    "build-tailwind": "bun tailwindcss -i ./src/input.css -o ./public/output.css --watch",
     "dev": "bun run --watch src/server.tsx"
   },
   "dependencies": {
     "@elysiajs/html": "^0.8.0",
+    "@elysiajs/static": "^0.8.1",
     "@kitajs/ts-html-plugin": "^1.3.3",
-    "elysia": "^0.8.9"
+    "elysia": "^0.8.9",
+    "tailwindcss": "^3.4.1"
   }
 }
