--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@elysiajs/html": "^0.8.0",
     "@elysiajs/static": "^0.8.1",
+    "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
     "elysia": "^0.8.9",
     "tailwindcss": "^3.4.1"
