--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
     "elysia": "^0.8.9",
+    "neverthrow": "^6.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
